@@ -28,8 +28,8 @@ public final class Names {
   public static final ResourceLocation ENERGY_GRID           = new ResourceLocation(OverpoweredTechnology.MOD_ID, "energy_grid");
   public static final ResourceLocation SEALED_CONTAINER      = new ResourceLocation(OverpoweredTechnology.MOD_ID, "sealed_container");
   public static final ResourceLocation BEAM_EMITTER          = new ResourceLocation(OverpoweredTechnology.MOD_ID, "beam_emitter");
-  public static final ResourceLocation FUSION_CORE           = new ResourceLocation(OverpoweredTechnology.MOD_ID, "fusion_fore");
-  public static final ResourceLocation UNKNOWN_TECHNOLOGY    = new ResourceLocation(OverpoweredTechnology.MOD_ID, "unknown_technology");
+  public static final ResourceLocation PLASMA                = new ResourceLocation(OverpoweredTechnology.MOD_ID, "plasma");
+  public static final ResourceLocation FUSION_CORE           = new ResourceLocation(OverpoweredTechnology.MOD_ID, "fusion_core");
   public static final ResourceLocation DIMENSIONAL_ANCHOR    = new ResourceLocation(OverpoweredTechnology.MOD_ID, "dimensional_anchor");
 
   public static final ResourceLocation FOCUS_LENS            = new ResourceLocation(OverpoweredTechnology.MOD_ID, "focus_lens");
